--- a/style/partials/_main.scss
+++ b/style/partials/_main.scss
@@ -832,7 +832,7 @@ section.creategif {
 
 @media only screen and (min-width: 600px) {
 
-    section.results div.ctn-results {
+    section.results div.ctn-results, section.favorites div.root-fav, section.mygifos div.ctn-content {
         padding: 20px 10%;
     }
 
