--- a/style/partials/_main.scss
+++ b/style/partials/_main.scss
@@ -832,6 +832,10 @@ section.creategif {
 
 @media only screen and (min-width: 600px) {
 
+    section.mygifos, section.favorites, section.creategif {
+        min-height: 76vh;
+    }
+
     section.results div.ctn-results, section.favorites div.root-fav, section.mygifos div.ctn-content {
         padding: 20px 10%;
     }
