--- a/style/style.css
+++ b/style/style.css
@@ -834,6 +834,9 @@ section.creategif {
         display: block; }
 
 @media only screen and (min-width: 600px) {
+  section.mygifos, section.favorites, section.creategif {
+    min-height: 76vh; }
+
   section.results div.ctn-results, section.favorites div.root-fav, section.mygifos div.ctn-content {
     padding: 20px 10%; }
 
